Deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: back-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-app
  template:
    metadata:
      labels:
        app: back-app
    spec:
      containers:
      - name: backend
        image: salmahesham1114/devops-test-project:backend
        ports:
        - containerPort: 5000
