back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  type: ClusterIP
  selector:
    app: back-app
  ports:
  - port: 5000
    targetPort: 5000
