front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: ClusterIP
  selector:
    app: front-app
  ports:
  - port: 5173
    targetPort: 5173
