ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: back-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-svc
            port: 
              number: 5173
